# mkrcx

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum  test.db
.github/workflows/: build-leash.yml  docker.yml  lint.yml  mega-linter.yml
backend/: Makefile  go.mod  go.sum
backend/src/leash/: Dockerfile  leash.go  leash_test.go
backend/src/leash/api/: api.go  feed.go  holds.go  notifications.go  trainings.go  users.go
backend/src/leash/commands/: create_apikey.go  create_user.go  (+2 more)
clients/: .gitignore
clients/card-helper/: Cargo.toml
clients/card-helper/src/: main.rs  reader.rs
clients/card-linker/: .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml
clients/card-linker/src/: api.rs  main.rs  tasks.rs
clients/card-linker/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
clients/card-linker/src-tauri/src/: main.rs
clients/card-linker/src/routes/: +page.svelte
clients/card-linker/src/routes/link/: +page.svelte
clients/leash-client/: Cargo.toml
clients/leash-client/src/: apikey.rs  client.rs  hold.rs  lib.rs  notification.rs  training.rs  user.rs
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/lib/: cache.ts  calendar.ts  calendarServer.ts  calendar_theme.scss  leash.ts  stores.ts  types.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
mkrcx-frontend/: package-lock.json
mkrcx-frontend/src/lib/: leash.ts
scripts/: ldap.py  migrate.py  other.py  pyproject.toml  rest.py
services/leash/frontend/: svelte.config.js
src/leash/: Dockerfile  frontend.go  leash.go  leash_test.go  nginx.conf  setup.go  sqlite.db
src/leash/api/: api.go  apikeys.go  holds.go  hooks.go  notifications.go  trainings.go  users.go
src/leash/discord/: discord.go
src/leash/frontend/: frontend.go  package-lock.json
src/leash/helpers/: setup.go
src/leash/signin/: signin.go
src/leash/web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
src/mkrcx-frontend/: package.json  pnpm-lock.yaml  tailwind.config.cjs
src/shared/authentication/: authentication.go  jwt.go
src/shared/gcode-parser/: parser.go
src/shared/models/: models.go  models_test.go
src_old/leash/: leash.go
(+133 files in other folders)
