[package]
name = "card-linker"
version = "0.1.0"
edition = "2021"

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
leash-client = { path = "../leash-client" }
card-helper = { path = "../card-helper" }
keyring = "3.2"

eframe = { version = "0.28" }
egui_extras = { version = "0.28", features = ["default", "all_loaders"] }
env_logger = { version = "0.11", default-features = false, features = [
  "auto-color",
  "humantime",
] }
image = { version = "0.25", features = ["jpeg", "png"] }

opencv = "0.93"
rqrr = "0.8"
bardecoder = "0.5.0"
rxing = "0.6.1"
tokio = "1.40.0"
catppuccin-egui = { version = "5.2.0", default_features = false, features = ["egui28"] }
