[package]
name = "card-linker"
version = "0.1.0"
edition = "2021"

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
leash-client = { path = "../leash-client" }
card-helper = { path = "../card-helper" }

eframe = { version = "0.29" }
egui_extras = { version = "0.29", features = ["default", "all_loaders"] }
env_logger = { version = "0.11", default-features = false, features = [
  "auto-color",
  "humantime",
] }
image = { version = "0.25", features = ["jpeg", "png"] }

nokhwa = { version = "0.10.5", features = ["input-native", "output-wgpu"] }
rqrr = "0.8"
tokio = "1.40.0"
catppuccin-egui = { version = "5.3", default_features = false, features = ["egui29"] }
ezk-image = "0.1.4"
dcv-color-primitives = "0.6.1"
