[package]
name = "leash-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = "0.12.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_url_params = "0.2.1"
url = { version = "2.5.0", features = ["serde"] }
